# ai_assistance

./: README.md  __init__.py  apps.py  core.py  planing_project.md  pyproject.toml  setup.py  urls.py  utils.py  views.py
locale/tet/LC_MESSAGES/: django.po
templates/ai_assistance/: ai_question_page.html  ai_response.html
